handle codacy failure

--- a/.codacy.yml
+++ b/.codacy.yml
@@ -80,16 +80,30 @@ engines:
     enabled: false
 
 exclude_paths:
-  - "tests/**"
-  - "docs/**"
+  - ".devcontainer/**"
+  - ".dvc/**"
+  - ".git/**"
+  - ".gitea/**"
+  - ".github/**"
+  - ".temp/**"
   - ".venv/**"
+  - ".vscode/**"
   - "data/**"
+  - "debug/**"
+  - "docs/**"
+  - "huggingface/**"
   - "models/**"
+  - "node_modules/**"
   - "notebooks/**"
-  - ".ipynb_checkpoints/**"
+  - "outputs/**"
+  - "temp/**"
+  - "terraform/**"
+  - "video-assets/**"
+  - "*.egg"
+  - "*.egg-info"
   - "**/__pycache__/**"
-  - "*.egg-info/**"
-  - "*.egg/**"
+  - "tests/**"
+  - ".ipynb_checkpoints/**"
   - "**/migrations/**"
   - "**/settings.py"
 
