--- a/.codacy.yml
+++ b/.codacy.yml
@@ -113,6 +113,7 @@ exclude_paths:
   - "notebooks/**"
   - "outputs/**"
   - "scripts/**"
+  - "src/dvclive/**"
   - "temp/**"
   - "terraform/**"
   - "tests/**"
