--- a/.codacy.yml
+++ b/.codacy.yml
@@ -86,26 +86,31 @@ engines:
     enabled: false
 
 include_paths:
+  - "configs/**"
+  - "huggingface/app.py"
   - "src/**"
+  - ".github/**"
 
 exclude_paths:
   - ".devcontainer/**"
   - ".dvc/**"
   - ".git/**"
   - ".gitea/**"
-  - ".github/**"
   - ".ipynb_checkpoints/**"
   - ".temp/**"
   - ".venv/**"
   - ".vscode/**"
   - "*.egg-info"
   - "*.egg"
+  - "*.mp3"
+  - "*.mp4"
+  - "*.png"
+  - "*.zip"
   - "**/__pycache__/**"
+  - "**/debug/**"
   - "**/migrations/**"
   - "**/settings.py"
-  - "build/**"
   - "data/**"
-  - "debug/**"
   - "docs/**"
   - "huggingface/**"
   - "models/**"
