--- a/.github/workflows/zip-repository.yml
+++ b/.github/workflows/zip-repository.yml
@@ -31,7 +31,7 @@ jobs:
       contents: write
     steps:
       - name: Checkout repository
-        uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938  # v4.2.0
+        uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
         with:
           fetch-depth: 1
 
@@ -77,10 +77,11 @@ jobs:
         run: |
           git add Final_Project_Team_3_Deliverable_3.zip
           git commit -m "Update Final_Project_Team_3_Deliverable_3.zip"
-          git push origin main
+          git pull
+          git push
 
       - name: Repository Dispatch
-        uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0  # v3.0.0
+        uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0 # v3.0.0
         with:
           token: ${{ secrets.AAI540_GROUP3_DISPATCH_TOKEN }}
           repository: aai540-group3/project
