add notebooks to zip

--- a/.github/workflows/zip-repository.yml
+++ b/.github/workflows/zip-repository.yml
@@ -16,6 +16,7 @@ on:
       - "dvc.yaml"
       - "dvclive/**"
       - "LICENSE"
+      - "notebooks/**"
       - "params.yaml"
       - "README.md"
       - "reports/**"
@@ -51,6 +52,7 @@ jobs:
           dvc.yaml
           dvclive/
           LICENSE
+          notebooks/
           params.yaml
           README.md
           reports/
