--- a/.github/workflows/zip-repository.yml
+++ b/.github/workflows/zip-repository.yml
@@ -22,7 +22,7 @@ on:
       - "reports/**"
       - "requirements.txt"
       - "src/**"
-      - "terraform/**"
+      - "terraform/main.tf"
   workflow_dispatch:
 
 jobs:
@@ -58,7 +58,7 @@ jobs:
           reports/
           requirements.txt
           src/
-          terraform/
+          terraform/main.tf
           EOF
 
       - name: Zip repository
