--- a/.github/workflows/zip-repository.yml
+++ b/.github/workflows/zip-repository.yml
@@ -32,40 +32,61 @@ jobs:
       contents: write
     steps:
       - name: Checkout repository
-        uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
+        uses: actions/checkout@v4
         with:
           fetch-depth: 1
 
       - name: Install pigz
         run: sudo apt-get install -y pigz
 
-      - name: Create file list
+      - name: Create temporary directory
+        run: mkdir -p temp_repo
+
+      - name: Copy files to temporary directory
         run: |
-          cat << EOF > files_to_zip.txt
-          .dvcignore
-          .env.template
-          .gitattributes
-          .github/workflows/mlops-pipeline.yml
-          .gitignore
-          configs/
-          dvc.lock
-          dvc.yaml
-          dvclive/
-          LICENSE
-          notebooks/
-          params.yaml
-          README.md
-          reports/
-          requirements.txt
-          src/
-          terraform/main.tf
-          EOF
+          files=(
+            ".dvcignore"
+            ".env.template"
+            ".gitattributes"
+            ".github/workflows/mlops-pipeline.yml"
+            ".gitignore"
+            "configs"
+            "dvc.lock"
+            "dvc.yaml"
+            "dvclive"
+            "LICENSE"
+            "notebooks"
+            "params.yaml"
+            "README.md"
+            "reports"
+            "requirements.txt"
+            "src"
+            "terraform/main.tf"
+          )
+          for file in "${files[@]}"; do
+            if [[ -d "$file" ]]; then
+              cp -r "$file" temp_repo/
+            else
+              cp "$file" temp_repo/
+            fi
+          done
+
+      - name: Remove unwanted files
+        run: |
+          unwanted_files=(
+            ".gitkeep"
+            ".gitignore"
+            ".gitattributes"
+          )
+          for file in "${unwanted_files[@]}"; do
+            find temp_repo -type f -name "$file" -delete
+          done
 
       - name: Zip repository
-        run: zip -r -0 $(cat files_to_zip.txt) | pigz -9 > Final_Project_Team_3_Deliverable_3.zip
+        run: zip -r -0 -9 temp_repo/ | pigz -9 > Final_Project_Team_3_Deliverable_3.zip
 
       - name: Cleanup
-        run: rm -f files_to_zip.txt
+        run: rm -rf temp_repo
 
       - name: Check zip file size
         run: ls -lh Final_Project_Team_3_Deliverable_3.zip
@@ -83,7 +104,7 @@ jobs:
           git push
 
       - name: Repository Dispatch
-        uses: peter-evans/repository-dispatch@ff45666b9427631e3450c54a1bcbee4d9ff4d7c0 # v3.0.0
+        uses: peter-evans/repository-dispatch@v3
         with:
           token: ${{ secrets.AAI540_GROUP3_DISPATCH_TOKEN }}
           repository: aai540-group3/project
