--- a/.github/workflows/deploy-tts-space.yml
+++ b/.github/workflows/deploy-tts-space.yml
@@ -1,5 +1,4 @@
 name: Deploy HF Space
-
 on:
   workflow_dispatch:
   push:
@@ -7,18 +6,21 @@ on:
       - main
     paths:
       - "huggingface/spaces/**"
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
       HF_TRANSFER_ENABLED: "1"
       REPO_ID: ${{ secrets.REPO_ID }}
-      LOCAL_DIR: "./huggingface/spaces/openai-tts"
       REMOTE_DIR: "."
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set up environment variables
+        run: |
+          echo "REPO_ROOT=$(git rev-parse --show-toplevel)" >> $GITHUB_ENV
+          echo "LOCAL_DIR=$REPO_ROOT/huggingface/spaces/openai-tts" >> $GITHUB_ENV
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -32,47 +34,6 @@ jobs:
         run: huggingface-cli login --token "${{ secrets.HUGGINGFACE_TOKEN }}"
 
       - name: Upload Space
-        if: always()
-        continue-on-error: true
         run: |
-          echo "Uploading files from ${{ env.LOCAL_DIR }} to ${{ env.REPO_ID }} at ${{ env.REMOTE_DIR }}"
-          huggingface-cli upload "${{ env.REPO_ID }}" "${{ env.LOCAL_DIR }}" "${{ env.REMOTE_DIR }}" --repo-type space
-
-  wait:
-    needs: deploy
-    runs-on: ubuntu-latest
-    env:
-      REPO_ID: ${{ secrets.REPO_ID }}
-      HF_SPACE_API_URL: "https://api.huggingface.co/spaces/${{ secrets.REPO_ID }}"
-    steps:
-      - name: Wait for Deployment
-        run: |
-          MAX_RETRIES=30
-          RETRY_COUNT=0
-          DEPLOYMENT_STATUS=""
-
-          while [[ "$DEPLOYMENT_STATUS" != "RUNNING" && "$DEPLOYMENT_STATUS" != "ERROR" && $RETRY_COUNT -lt $MAX_RETRIES ]]; do
-            RESPONSE=$(curl -s -H "Authorization: Bearer ${{ secrets.HUGGINGFACE_TOKEN }}" "${{ env.HF_SPACE_API_URL }}" -o /dev/null -w %{http_code})
-            if [[ $RESPONSE -ne 200 ]]; then
-              echo "Error: HTTP status code $RESPONSE. Check token and space ID."
-              exit 1
-            fi
-            RESPONSE=$(curl -s -H "Authorization: Bearer ${{ secrets.HUGGINGFACE_TOKEN }}" "${{ env.HF_SPACE_API_URL }}")
-            DEPLOYMENT_STATUS=$(echo "$RESPONSE" | jq -r '.runtime.stage') || DEPLOYMENT_STATUS=""
-            echo "Space status: $DEPLOYMENT_STATUS. Retry: $((RETRY_COUNT+1))/$MAX_RETRIES"
-            sleep 10
-            RETRY_COUNT=$((RETRY_COUNT + 1))
-          done
-
-          if [[ $RETRY_COUNT -ge $MAX_RETRIES ]]; then
-            echo "Error: Deployment timed out after $MAX_RETRIES retries."
-            exit 1
-          fi
-
-          if [[ "$DEPLOYMENT_STATUS" == "ERROR" ]]; then
-            echo "Error: Space deployment failed. Check Hugging Face Space logs."
-            exit 1
-          fi
-
-          echo "Space deployed successfully!"
-          echo "::set-output name=space_url::https://${{ secrets.REPO_ID }}.hf.space"
+          echo "Uploading files from $LOCAL_DIR to $REPO_ID at $REMOTE_DIR"
+          huggingface-cli upload "$REPO_ID" "$LOCAL_DIR" "$REMOTE_DIR" --repo-type space
