--- a/.github/workflows/generate-pdfs.yml
+++ b/.github/workflows/generate-pdfs.yml
@@ -1,4 +1,5 @@
 name: Generate PDFs
+
 on:
   push:
     paths:
@@ -6,14 +7,18 @@ on:
       - "docs/design-document/Final_Project_Team_3_Deliverable_1.tex"
       - "docs/design-document/references.bib"
   workflow_dispatch:
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
+
 permissions:
   contents: write
+
 env:
   REPO_NAME: aai540-group3/project
   EVENT_TYPE: create-release
+
 jobs:
   generate-pdfs:
     runs-on: ubuntu-latest
@@ -40,7 +45,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-apt-
 
-      - name: Install TeX
+      - name: Install TeX and additional tools
         run: |
           sudo apt-get update
           sudo apt-get -y install \
@@ -49,7 +54,9 @@ jobs:
             texlive-latex-extra \
             texlive-fonts-extra \
             texlive-bibtex-extra \
-            texlive-science
+            texlive-science \
+            texlive-extra-utils \
+            poppler-utils
 
       - name: Remove existing PDFs
         run: |
@@ -58,13 +65,11 @@ jobs:
 
       - name: Generate PDFs
         run: |
-          TEXINPUTS="$DESIGN_DOC_DIR:." \
+          TEXINPUTS="$DESIGN_DOC_DIR:."
           pdflatex -interaction=nonstopmode -file-line-error -halt-on-error "$TEX_FILE"
           biber "$BIB_FILE"
           pdflatex -interaction=nonstopmode -file-line-error -halt-on-error "$TEX_FILE"
           pdflatex -interaction=nonstopmode -file-line-error -halt-on-error "$TEX_FILE"
-        if: ${{ failure() }}
-        continue-on-error: false
 
       - name: Check if PDF was generated
         run: |
@@ -77,6 +82,16 @@ jobs:
         run: |
           cp "$PDF_FILE" "$ROOT_PDF_FILE"
 
+      - name: Get word count
+        run: |
+          WORDS=$(texcount -1 -sum -inc "$TEX_FILE" | grep "Sum count:" | awk '{print $3}')
+          echo "WORDS=$WORDS" >> $GITHUB_ENV
+
+      - name: Get page count
+        run: |
+          PAGES=$(pdfinfo "$PDF_FILE" | grep Pages: | awk '{print $2}')
+          echo "PAGES=$PAGES" >> $GITHUB_ENV
+
       - name: Configure Git
         run: |
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -85,7 +100,7 @@ jobs:
       - name: Add, commit, and push files
         run: |
           git add "$ROOT_PDF_FILE"
-          git commit -m "Push PDF: $(basename $ROOT_PDF_FILE)"
+          git commit -m "WORDS: $WORDS | PAGES: $PAGES"
           git pull origin main
           git push origin main
 
