--- a/.github/workflows/generate-video.yml
+++ b/.github/workflows/generate-video.yml
@@ -53,11 +53,6 @@ jobs:
           echo "Current directory: $(pwd)"
           ls -la
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
       - name: Install System Dependencies
         run: |
           sudo apt-get update
@@ -65,6 +60,11 @@ jobs:
               ffmpeg \
               libreoffice \
               poppler-utils
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
       - name: Install Python Dependencies
         run: |
@@ -86,10 +86,10 @@ jobs:
 
       - name: Delete Old Files
         run: |
-          rm -rf $MP4_FILE
-          rm -rf $PDF_FILE
-          rm -rf $ASSETS_DIR
-          mkdir -p $ASSETS_DIR
+          rm -rf "$MP4_FILE"
+          rm -rf "$PDF_FILE"
+          rm -rf "$ASSETS_DIR"
+          mkdir -p "$ASSETS_DIR"
 
       - name: Generate Video
         id: generate
